<resources>
    <string name="app_name">Εμβόλια Covid 19</string>
    <string name="title">Κατασκευάστριες Εταιρείες</string>
    <string name="pfizer">Pfizer</string>
    <string name="moderna">Moderna</string>
    <string name="astra_zeneca">Astra Zeneca</string>
    <string name="pfizer_image">pfizer image</string>
    <string name="reminder">Yπενθύμιση</string>
    <string name="companies">Εταιρείες</string>
    <string name="why">Γιατί να εμβολιαστώ;</string>
    <string name="About">Σχετικά με εμάς</string>
    <string name="textview">Σχετικά με εμάς</string>
    <string name="TextAboutUs">Είμαστε φοιτητές του τμήματος πληροφορικής του Αριστοτελείου Πανεπιστημίου Θεσσαλονίκης και αυτή η εφαρμογή είναι μια εργασία που γίνεται στο μάθημα Ανάπτυξη Εφαρμογών Κινητών Συσκευών και έχει ως πρωταρχικό σκοπό την ενημέρωση των πολιτών σχετικά με τα εμβόλια κατα του κοροναϊού.</string>
    <string name="safety_text">Τα εμβόλια παρασκευάζονται με σκοπό την αντιμετώπιση νοσημάτων που δεν είναι δυνατόν να ελεγχθούν μόνο με την εφαρμογή άλλων μέτρων δημόσιας υγείας. Στόχος τους είναι να περιορίσουν και να εξαλείψουν νοσήματα με υψηλή μεταδοτικότητα, με σοβαρές επιπτώσεις στην υγεία των ανθρώπων, με υψηλή θνητότητα, με μεγάλη επιβάρυνση στα συστήματα υγείας, αλλά και με δυσμενείς οικονομικές επιπτώσεις στην κοινωνία.
        Ο κορωνοϊός SARS-CoV-2 είναι ένας νέος ιός που μέσα σε ένα χρόνο από την εμφάνισή του επηρέασε δραματικά τις ζωές όλων των ανθρώπων παγκοσμίως. Έχει υψηλή μεταδοτικότητα με αποτέλεσμα να είναι αδύνατο να ελεγχθεί μόνο με την εφαρμογή των άλλων, πιο γνωστών σε όλους μας, μέτρων δημόσιας υγείας, επιβαρύνει σοβαρά σε πολλές περιπτώσεις την υγεία των νοσούντων, μπορεί να οδηγήσει σε απώλεια πολλών ανθρώπινων ζωών ακόμα υγιών ατόμων, επηρεάζει σημαντικά την καθημερινότητα όλων, δοκιμάζει τα συστήματα υγείας και δημιουργεί ανεπανόρθωτες οικονομικές επιπτώσεις σε όλον τον πλανήτη.</string>
    <string name="safety_image_desc">Image about health</string>
    <string name="item_image_description">image_discription</string>
    <string name="item_title">Item_title</string>
    <string name="item_date">item_detail</string>
    <string name="item_time">item_time</string>
    <string name="text_delete">delete</string>
    <string name="channel_name">notifications_channel</string>
    <string name="channel_description">channel for the notifications</string>
    <string name="name_hint">Εισάγετε όνομα</string>
    <string name="submit_text">Υποβολή</string>
    <string name="insert_first_date">Εισάγετε το πρώτο ραντεβου</string>
    <string name="insert_second_date">Εισάγετε το δεύτερο ραντεβου</string>
    <string name="Show_first_date">Πρώτο ραντεβού:</string>
    <string name="Show_second_date">Δεύτερο ραντεβού:</string>
    <string name="Show_third_date">\"Ανωσία\":</string>
    <string name="main_title">Αρχική</string>
    <string name="text_add">Add</string>
    <string name="pfizer_text">Το εμβόλιο της Pfizer-BioNTech είναι ένα από τα εγκεκριμένα εμβόλια τα οποία έχουμε για την αντιμετώπιση της νόσου COVID-19 και έχει εγκριθεί για χρήση από άτομα άνω των 12 ετών. Το εμβόλιο είναι της νέας τεχνολογίας mRNA εμβολίων και η αποτελεσματικότητα του συγκεκριμένου εμβολίου είναι 95%. Η διαδικασία του εμβολιασμού με το συγκεκριμένο εμβόλιο περιλαμβάνει 2 δόσεις εμβολίου με διαφορά τουλάχιστον 20 ημερών ανάμεσα στις δύο δόσεις.</string>
    <string name="moderna_text">Το εμβόλιο της Moderna-NIH είναι ένα από τα εγκεκριμένα εμβόλια τα οποία έχουμε για την αντιμετώπιση της νόσου COVID-19 και έχει εγκριθεί για χρήση από άτομα άνω των 18 ετών. Το εμβόλιο είναι της νέας τεχνολογίας mRNA εμβολίων και η αποτελεσματικότητα του συγκεκριμένου εμβολίου είναι 90%. Η διαδικασία του εμβολιασμού με το συγκεκριμένο εμβόλιο περιλαμβάνει 2 δόσεις εμβολίου με διαφορά τουλάχιστον 1 μήνα(28 ημέρες) ανάμεσα στις δύο δόσεις.</string>
    <string name="astra_zeneca_text">Το εμβόλιο της AstraZeneca-Oxford είναι ένα από τα εγκεκριμένα εμβόλια τα οποία έχουμε για την αντιμετώπιση της νόσου COVID-19 και έχει εγκριθεί για χρήση από άτομα άνω των 18 ετών. Το εμβόλιο είναι της νέας τεχνολογίας mRNA εμβολίων και η αποτελεσματικότητα του συγκεκριμένου εμβολίου είναι 67%. Η διαδικασία του εμβολιασμού με το συγκεκριμένο εμβόλιο περιλαμβάνει 2 δόσεις εμβολίου με διαφορά 1-3 μήνες ανάμεσα στις δύο δόσεις.</string>
</resources>