<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_view"
    android:layout_margin="5dp"
    card_view:cardBackgroundColor="@color/green_500"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="3dp"
    card_view:contentPadding="4dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/item_image_description"
            card_view:layout_constraintWidth_percent=".20"
            card_view:layout_constraintWidth_default="percent"
            card_view:layout_constraintHeight_percent="1"
            card_view:layout_constraintHeight_default="percent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/item_title"
            android:textSize="20sp"
            card_view:layout_constraintStart_toEndOf="@+id/item_image"
            card_view:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/item_date"
            android:textSize="18sp"
            card_view:layout_constraintStart_toEndOf="@+id/item_image"
            card_view:layout_constraintTop_toBottomOf="@+id/item_title" />

        <TextView
            android:id="@+id/item_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/item_time"
            android:textSize="16sp"
            card_view:layout_constraintStart_toEndOf="@+id/item_image"
            card_view:layout_constraintTop_toBottomOf="@+id/item_date" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:clickable="true"
            card_view:layout_constraintWidth_percent="1"
            card_view:layout_constraintWidth_default="percent"
            card_view:layout_constraintHeight_percent="0.65"
            card_view:layout_constraintHeight_default="percent"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:srcCompat="@android:drawable/ic_menu_delete"
            card_view:backgroundTint="@color/blue_500"
            android:contentDescription="@string/text_delete"
            android:focusable="true" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>